--- a/RestaurantManagement/WebContent/WEB-INF/html-template/fragment.html
+++ b/RestaurantManagement/WebContent/WEB-INF/html-template/fragment.html
@@ -8,13 +8,11 @@
 	
 	<div class="footer-div" th:fragment="footer-div">
 		<footer class="footer-tag">
-			<p>Posted by: Sampson He</p>
-			<p>Contact at: <a href="mailto:holmes200601@hotmail.com">holmes200601@hotmail.com</a></p>
+			<p>Posted by: Sampson He<br>
+			Contact at: <a href="mailto:holmes200601@hotmail.com">holmes200601@hotmail.com</a></p>
 		</footer>
 	</div>
 	
-	<div class="section-divide-div" th:fragment="section-div">
-		<hr />
-	</div>
+	<div class="section-divide-div" th:fragment="section-div"></div>
 
 </html>
